Fri Sep  7 07:11:34 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/cgi.rb: CGI#doctype(): bug fix (html4Fr).

	* lib/net/telnet.rb, lib/cgi.rb: remove VERSION, RELEASE_DATE,
	  VERSION_CODE, RELEASE_CODE. please use REVISION.

	* lib/cgi.rb: CGI#header(): bug fix.

	* lib/net/telnet.rb, lib/cgi.rb: concat --> +=

Thu Sep  6 17:38:18 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* dir.c (dir_s_chdir): raise if environment variable HOME/LOGDIR
	  not set.

	* dir.c (glob_helper): avoid infinite loop on a file name with
	  wildcard characters. (ruby-bugs#PR177)

Thu Sep  6 03:15:24 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): should check whole ancestors to
	  avoid duplicate module inclusion.

Thu Sep  6 14:27:54 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_base_s_hexdigest): remove a debug
	  print.

Thu Sep  6 14:00:49 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_base_s_digest,
	  rb_digest_base_s_hexdigest): ensure that a string is given.

Thu Sep  6 13:28:51 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/jcode.rb (_regexp_quote): fix quote handling, again.

Thu Sep  6 12:02:49 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* file.c (rb_find_file_ext): add const qualifiers to ext.

	* intern.h (rb_find_file_ext): ditto.

Wed Sep  5 17:41:11 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/jcode.rb (_regexp_quote): fix quote handling.

Wed Sep  5 20:02:27 2001  Shin'ya Adzumi  <adzumi@denpa.org>

	* string.c (trnext): should check backslash before updating "now"
	  position.

Mon Sep  3 20:26:08 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h (rb_find_file_ext): changed from rb_find_file_noext().

Mon Sep  3 15:12:49 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): should not adjust argc/argv if -e option
	  is supplied.

Mon Sep  3 14:38:24 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
